--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,2 @@
-git+https://github.com/vast-ai/vast-sdk.git@worker-sdk
+git+https://github.com/vast-ai/vast-sdk.git@session
 aiohttp>=3.9.0,<4.0.0
-torch>=2.1.0
-torchvision>=0.16.0
